[package]
name = "theia"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5.2"
prost = "0.8.0"
prost-types = "0.8.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
fake = "2.4"
rand = "0.8"
sloggers = "2.0.2"
slog = "2.7.0"
async-trait = "0.1.51"

[build-dependencies]
tonic-build = "0.5.2"
prost = "0.8.0"
prost-build = { version = "0.8.0" }
prost-types = "0.8.0"
